Stopped users being able to scroll left or right if content overflow on the x-axis

--- a/assets/less/hmcc.less
+++ b/assets/less/hmcc.less
@@ -27,8 +27,12 @@
 @import 'footer';
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: @background;
+  font-family: 'Open Sans', sans-serif;
+  background-color: @background;
+}
+
+html,body {
+  overflow-x: hidden;
 }
 
 select {
